--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ marks management, authentication and reporting dashboard.
 </div>
 
 <div class="project-links mt-auto">
-<a href="https://github.com/riyazs0506/student-management-system"
+<a href="https://github.com/riyazs0506/students_python_project"
 target="_blank"
 class="btn btn-sm btn-outline-warning me-2">
 <i class="bi bi-github"></i> GitHub
@@ -233,7 +233,7 @@ performance analytics and fee automation.
 </div>
 
 <div class="project-links mt-auto">
-<a href="https://github.com/riyazs0506/cricpro-academy-system"
+<a href="https://github.com/riyazs0506/cricpros"
 target="_blank"
 class="btn btn-sm btn-outline-warning me-2">
 <i class="bi bi-github"></i> GitHub
@@ -268,7 +268,7 @@ live bidding engine and team balance logic.
 </div>
 
 <div class="project-links mt-auto">
-<a href="https://github.com/riyazs0506/ipl-auction-system"
+<a href="https://github.com/riyazs0506/iplauction2026"
 target="_blank"
 class="btn btn-sm btn-outline-warning me-2">
 <i class="bi bi-github"></i> GitHub
@@ -302,7 +302,7 @@ built with Java backend and MySQL database.
 </div>
 
 <div class="project-links mt-auto">
-<a href="https://github.com/riyazs0506/sgre-management-system"
+<a href="https://github.com/riyazs0506/SGRE-calculate"
 target="_blank"
 class="btn btn-sm btn-outline-warning me-2">
 <i class="bi bi-github"></i> GitHub
@@ -337,7 +337,7 @@ email notifications and participant tracking.
 </div>
 
 <div class="project-links mt-auto">
-<a href="https://github.com/riyazs0506/nexovate26-event-platform"
+<a href="https://github.com/riyazs0506/Nexovate2k26"
 target="_blank"
 class="btn btn-sm btn-outline-warning me-2">
 <i class="bi bi-github"></i> GitHub
