--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Download CV
 
 <div class="social-icons mt-4">
 <a href="https://github.com/riyazs0506" target="_blank"><i class="bi bi-github"></i></a>
-<a href="www.linkedin.com/in/mohammed-riyaz-s-173a94292" target="_blank"><i class="bi bi-linkedin"></i></a>
+<a href="https://www.linkedin.com/in/mohammed-riyaz-s-173a94292" target="_blank"><i class="bi bi-linkedin"></i></a>
 <a href="mailto:mohammedriyazs0506@gmail.com"><i class="bi bi-envelope"></i></a>
 </div>
 
