--- a/index.html
+++ b/index.html
@@ -57,10 +57,28 @@ Download CV
 </a>
 
 <div class="social-icons mt-4">
-<a href="https://github.com/riyazs0506" target="_blank"><i class="bi bi-github"></i></a>
-<a href="https://www.linkedin.com/in/mohammed-riyaz-s-173a94292" target="_blank"><i class="bi bi-linkedin"></i></a>
-<a href="mailto:mohammedriyazs0506@gmail.com"><i class="bi bi-envelope"></i></a>
+
+  <!-- GitHub -->
+  <a href="https://github.com/riyazs0506" 
+     target="_blank" 
+     rel="noopener noreferrer">
+    <i class="bi bi-github"></i>
+  </a>
+
+  <!-- LinkedIn (Correct Profile) -->
+  <a href="https://www.linkedin.com/in/mohammed-riyaz-s-173a94292/" 
+     target="_blank" 
+     rel="noopener noreferrer">
+    <i class="bi bi-linkedin"></i>
+  </a>
+
+  <!-- Email -->
+  <a href="mailto:mohammedriyazs0506@gmail.com">
+    <i class="bi bi-envelope"></i>
+  </a>
+
 </div>
+
 
 </div>
 
